--- a/index.html
+++ b/index.html
@@ -2245,6 +2245,10 @@ Vérifiez que votre fichier CSV est au bon format.`);
                                     <div class="asset-stat-value">${totalQty.toFixed(2)}</div>
                                 </div>
                                 <div class="asset-stat">
+                                    <div class="asset-stat-label">Investi</div>
+                                    <div class="asset-stat-value">€${totalInvested.toFixed(2)}</div>
+                                </div>
+                                <div class="asset-stat">
                                     <div class="asset-stat-label">PRU</div>
                                     <div class="asset-stat-value">€${avgPrice.toFixed(2)}</div>
                                 </div>
