--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/portfolio-manager/CSS/styles.css">
 </head>
 <body>
     <!-- Menu Hamburger (mobile only) -->
