Modification outil portfolio

--- a/index.html
+++ b/index.html
@@ -2145,6 +2145,225 @@ Vérifiez que votre fichier CSV est au bon format.`);
             }
         }
 
+        function updatePortfolio() {
+            // Calculate values for each category
+            let cryptoValue = 0;
+            let cryptoInvested = 0;
+            portfolio.crypto.forEach(c => {
+                const currentPrice = portfolio.prices[c.symbol] || 0;
+                cryptoValue += c.quantity * currentPrice;
+                cryptoInvested += c.quantity * c.price;
+            });
+
+            // PEA calculations
+            let peaValue = 0;
+            let peaInvested = 0;
+            const peaByTicker = {};
+            portfolio.pea.forEach(p => {
+                const fees = p.fees || 0;
+                if (!peaByTicker[p.ticker]) {
+                    peaByTicker[p.ticker] = { quantity: 0, invested: 0 };
+                }
+                peaByTicker[p.ticker].quantity += p.quantity;
+                peaByTicker[p.ticker].invested += (p.quantity * p.price) + fees;
+            });
+
+            Object.entries(peaByTicker).forEach(([ticker, data]) => {
+                const avgPrice = data.invested / data.quantity;
+                const currentPrice = portfolio.prices[ticker] || avgPrice;
+                peaValue += data.quantity * currentPrice;
+                peaInvested += data.invested;
+            });
+
+            // Livrets
+            let livretsValue = 0;
+            portfolio.livrets.forEach(l => {
+                const amount = parseFloat(l.amount) || 0;
+                livretsValue += amount;
+            });
+
+            // Fundraising
+            let fundraisingValue = 0;
+            let fundraisingInvested = 0;
+            portfolio.fundraising.forEach(f => {
+                fundraisingValue += f.valuation;
+                fundraisingInvested += f.amount;
+            });
+
+            const totalValue = cryptoValue + peaValue + livretsValue + fundraisingValue;
+            const totalInvested = cryptoInvested + peaInvested + livretsValue + fundraisingInvested;
+            const totalPnL = totalValue - totalInvested;
+            const totalPerf = totalInvested > 0 ? (totalPnL / totalInvested) * 100 : 0;
+
+            // Count assets
+            const totalAssets = portfolio.crypto.length + Object.keys(peaByTicker).length + 
+                               portfolio.livrets.length + portfolio.fundraising.length;
+
+            // Update overview
+            const overviewHTML = `
+                <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; margin-bottom: 24px;">
+                    <div style="text-align: center; padding: 20px; background: rgba(255, 99, 71, 0.05); border-radius: 12px; border: 1px solid var(--border-subtle);">
+                        <div style="font-size: 0.9em; color: var(--text-secondary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 1px;">Valeur totale</div>
+                        <div style="font-size: 2.2em; font-weight: 900; color: var(--orange-primary);">
+                            €${totalValue.toLocaleString('fr-FR', {minimumFractionDigits: 2, maximumFractionDigits: 2})}
+                        </div>
+                    </div>
+                    <div style="text-align: center; padding: 20px; background: rgba(255, 99, 71, 0.05); border-radius: 12px; border: 1px solid var(--border-subtle);">
+                        <div style="font-size: 0.9em; color: var(--text-secondary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 1px;">Performance</div>
+                        <div style="font-size: 2.2em; font-weight: 900;" class="${totalPerf >= 0 ? 'positive' : 'negative'}">
+                            ${totalPerf >= 0 ? '+' : ''}${totalPerf.toFixed(2)}%
+                        </div>
+                    </div>
+                </div>
+
+                <div style="display: grid; gap: 12px;">
+                    <div style="display: flex; justify-content: space-between; align-items: center; padding: 16px; background: var(--bg-secondary); border-radius: 12px; border-left: 4px solid var(--orange-primary);">
+                        <div>
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">₿ Crypto</div>
+                            <div style="font-weight: 700; font-size: 1.3em;">€${cryptoValue.toLocaleString('fr-FR', {minimumFractionDigits: 2})}</div>
+                        </div>
+                        <div style="text-align: right;">
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">${portfolio.crypto.length} actifs</div>
+                            <div class="${(cryptoValue - cryptoInvested) >= 0 ? 'positive' : 'negative'}" style="font-weight: 700;">
+                                ${cryptoInvested > 0 ? ((cryptoValue - cryptoInvested) >= 0 ? '+' : '') + ((cryptoValue - cryptoInvested) / cryptoInvested * 100).toFixed(2) + '%' : '-'}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div style="display: flex; justify-content: space-between; align-items: center; padding: 16px; background: var(--bg-secondary); border-radius: 12px; border-left: 4px solid #4a9eff;">
+                        <div>
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">📊 Actions (PEA)</div>
+                            <div style="font-weight: 700; font-size: 1.3em;">€${peaValue.toLocaleString('fr-FR', {minimumFractionDigits: 2})}</div>
+                        </div>
+                        <div style="text-align: right;">
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">${Object.keys(peaByTicker).length} actifs</div>
+                            <div class="${(peaValue - peaInvested) >= 0 ? 'positive' : 'negative'}" style="font-weight: 700;">
+                                ${peaInvested > 0 ? ((peaValue - peaInvested) >= 0 ? '+' : '') + ((peaValue - peaInvested) / peaInvested * 100).toFixed(2) + '%' : '-'}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div style="display: flex; justify-content: space-between; align-items: center; padding: 16px; background: var(--bg-secondary); border-radius: 12px; border-left: 4px solid var(--success);">
+                        <div>
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">💰 Livrets</div>
+                            <div style="font-weight: 700; font-size: 1.3em;">€${livretsValue.toLocaleString('fr-FR', {minimumFractionDigits: 2})}</div>
+                        </div>
+                        <div style="text-align: right;">
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">${portfolio.livrets.length} comptes</div>
+                            <div style="font-weight: 700; color: var(--success);">Stable</div>
+                        </div>
+                    </div>
+
+                    <div style="display: flex; justify-content: space-between; align-items: center; padding: 16px; background: var(--bg-secondary); border-radius: 12px; border-left: 4px solid #9b59b6;">
+                        <div>
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">🚀 Levées de fonds</div>
+                            <div style="font-weight: 700; font-size: 1.3em;">€${fundraisingValue.toLocaleString('fr-FR', {minimumFractionDigits: 2})}</div>
+                        </div>
+                        <div style="text-align: right;">
+                            <div style="font-size: 0.85em; color: var(--text-secondary); margin-bottom: 4px;">${portfolio.fundraising.length} projets</div>
+                            <div class="${(fundraisingValue - fundraisingInvested) >= 0 ? 'positive' : 'negative'}" style="font-weight: 700;">
+                                ${fundraisingInvested > 0 ? ((fundraisingValue - fundraisingInvested) >= 0 ? '+' : '') + ((fundraisingValue - fundraisingInvested) / fundraisingInvested * 100).toFixed(2) + '%' : '-'}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            `;
+
+            document.getElementById('portfolioOverview').innerHTML = overviewHTML;
+
+            // Update allocation chart
+            updatePortfolioAllocationChart(cryptoValue, peaValue, livretsValue, fundraisingValue);
+
+            // Apply privacy mode if enabled
+            if (isPrivacyMode) {
+                applyPrivacyMode();
+            }
+        }
+
+        function updatePortfolioAllocationChart(cryptoValue, peaValue, livretsValue, fundraisingValue) {
+            const ctx = document.getElementById('portfolioAllocationChart');
+            if (!ctx) return;
+
+            const totalValue = cryptoValue + peaValue + livretsValue + fundraisingValue;
+
+            if (window.portfolioAllocationChartInstance) {
+                window.portfolioAllocationChartInstance.destroy();
+            }
+
+            window.portfolioAllocationChartInstance = new Chart(ctx, {
+                type: 'doughnut',
+                data: {
+                    labels: ['Crypto', 'Actions (PEA)', 'Livrets', 'Levées'],
+                    datasets: [{
+                        data: [cryptoValue, peaValue, livretsValue, fundraisingValue],
+                        backgroundColor: [
+                            'rgba(255, 99, 71, 0.8)',
+                            'rgba(74, 158, 255, 0.8)',
+                            'rgba(0, 212, 170, 0.8)',
+                            'rgba(155, 89, 182, 0.8)'
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 71, 1)',
+                            'rgba(74, 158, 255, 1)',
+                            'rgba(0, 212, 170, 1)',
+                            'rgba(155, 89, 182, 1)'
+                        ],
+                        borderWidth: 2
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: true,
+                    plugins: {
+                        legend: {
+                            position: 'bottom',
+                            labels: {
+                                color: '#ffffff',
+                                padding: 15,
+                                font: {
+                                    size: 12,
+                                    weight: 600,
+                                    family: 'Inter'
+                                },
+                                generateLabels: function(chart) {
+                                    const data = chart.data;
+                                    if (data.labels.length && data.datasets.length) {
+                                        return data.labels.map((label, i) => {
+                                            const value = data.datasets[0].data[i];
+                                            const percentage = totalValue > 0 ? ((value / totalValue) * 100).toFixed(1) : 0;
+                                            return {
+                                                text: `${label}: €${value.toLocaleString('fr-FR', {maximumFractionDigits: 0})} (${percentage}%)`,
+                                                fillStyle: data.datasets[0].backgroundColor[i],
+                                                hidden: false,
+                                                index: i
+                                            };
+                                        });
+                                    }
+                                    return [];
+                                }
+                            }
+                        },
+                        tooltip: {
+                            backgroundColor: 'rgba(26, 32, 54, 0.95)',
+                            titleColor: '#ffffff',
+                            bodyColor: '#ffffff',
+                            borderColor: 'rgba(255, 99, 71, 0.5)',
+                            borderWidth: 1,
+                            padding: 12,
+                            displayColors: true,
+                            callbacks: {
+                                label: function(context) {
+                                    const value = context.parsed;
+                                    const percentage = totalValue > 0 ? ((value / totalValue) * 100).toFixed(2) : 0;
+                                    return `${context.label}: €${value.toLocaleString('fr-FR', {minimumFractionDigits: 2})} (${percentage}%)`;
+                                }
+                            }
+                        }
+                    }
+                }
+            });
+        }
+
         function updateDashboard() {
             let totalValue = 0;
             let totalInvested = 0;
@@ -2515,6 +2734,7 @@ Vérifiez que votre fichier CSV est au bon format.`);
             updateLivretsList(); // Update livrets
             updateFundraisingList();
             updateDashboard();
+            updatePortfolio(); // Update portfolio overview
             
             // Load market indicators and news
             loadCryptoFearGreed();
@@ -3419,6 +3639,7 @@ Vérifiez que votre fichier CSV est au bon format.`);
             updatePerformanceView();
             updateDiversificationAnalysis();
             updateTransactionHistory();
+            updatePortfolio();
         };
         
         // Function to handle time range selection from dropdown
