Suppression objectif lorsque l'on se déco

--- a/index.html
+++ b/index.html
@@ -3116,6 +3116,7 @@ Vérifiez que votre fichier CSV est au bon format.`);
             
             // Update all displays to show empty state
             updateAll();
+            updateGoalsList(); // Update goals list to show empty state
             
             // Update connection button state
             updateDriveConnectionButton(false);
